fixed dimensions on mobile

--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ h1 {
     letter-spacing: 2px;
 }
 
+.h_2{
+    text-align: center;
+}
+
 h2 {
     font-family: arial;
     font-size: 30px;
@@ -34,22 +38,13 @@ p {
 }
 
 .p1{
-    font-family: arial;
-    line-height: 30px;
-
-    text-align: center;
-
-    color: rgb(255, 255, 255);
+    font-size: 20px; 
+    color: rgb(255, 255, 255); 
+    text-align: center; 
+    position: absolute; 
+    top:10%;
 }
 
-.p2{
-    font-family: arial;
-    line-height: 30px;
-
-    text-align: center;
-
-    color: rgb(255, 255, 255);
-}
 
 a{
     text-decoration: none;
@@ -128,9 +123,14 @@ body {
 }
 
 .img {
-    position: absolute;
-    top: 30%;
-    left: 55%;
+    width: 540px; 
+    height: 360px;
+    position: relative;
+    top: 20px;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 
 @media only screen and (max-width: 600px){
@@ -147,15 +147,15 @@ body {
     }
 
     .img {
-        left: 0%;
-        top: 140%;
+        width: 270px;
+        height: 180px;
     }
 
     .p1 {
         width: 100%;
     }
 
-    .p2 {
-        top: 100%;
+    .h_2 {
+        text-align: right;
     }
 }
